# imperial-court-of-the-port

./: .dockerignore  .env.example  .gitignore  AGENT_LOGGING_GUIDE.md  ARCHITECTURE.md  BACKGROUND_JOBS.md  CELERY_SETUP.md  DATABASE_TOOLS_COMPLETE_GUIDE.md  DEPLOYMENT.md  Dockerfile  README.md  crew.py  docker-compose.prod.yml  docker-compose.yml  install_missing_deps.py  main.py  message (1).txt  pyproject.toml  requirements.in  requirements.txt  requirements1.txt  simple_list_test.py  simple_test.py  start_celery_worker.py  test_agent_logging.py  test_api_jobs.py  test_background_jobs.py  test_database_connection.py  test_escalation_direct.py  test_escalation_system.py  test_file_upload_api.py  test_mock_mode_fix.py  test_multi_agent_system.py  test_orchestrator_contact.py
app/: agent_examples.py  agent_tools.py  agent_tools_registry.py  agents.py  agents_db.py  celery_config.py  celery_tasks.py  config.py  database_tools_testing.py  db.py  db_transform.py  escalation_manager.py  job_manager.py  main.py  models.py  orchestrator.py  rag_cases.py  rag_chunking.py  rag_embeddings.py  rag_ingest.py  rag_qdrant.py  router_db.py  router_incidents.py  router_rag.py  seed.py  supabase_client.py
data/: case_log.cleaned.csv  case_log.csv  parsed_knowledge_base.txt
deploy/: build-and-push.bat  build-and-push.sh  kubernetes.yaml
imperial_court_of_the_port.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
myenv/: pyvenv.cfg
scripts/: debug_progress.py  simple_test.py  test_agent_based_escalation.py  test_celery_direct.py  test_contact_fix.py  test_crewai_fix.py  (+6 more)
(+31 files in other folders)
