[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imperial-court-of-the-port"
version = "0.1.0"
description = "Agentic AI backend (FastAPI + RAG) for port incidents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "NTU Code Sprint Team" }
]
license = { text = "MIT" }
keywords = ["fastapi", "rag", "agents", "crewai", "qdrant"]
dependencies = [
	"fastapi==0.115.0",
	"uvicorn[standard]==0.30.6",
	"pydantic==2.9.2",
	"pydantic-settings==2.5.2",
	"httpx==0.27.2",
	"python-dotenv==1.0.1",
	"loguru==0.7.2",
	"crewai==0.51.0",
	"crewai-tools==0.21.0",
	"openai==1.52.2",
	"langchain==0.3.3",
	"langchain-openai==0.2.2",
	"numpy==2.1.2",
	"pandas==2.2.3",
	"qdrant-client==1.9.0",
	"tiktoken==0.7.0",
	"docx2txt==0.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.urls]
Homepage = "https://example.com"
